changed functionality to read new format patch files from a directory. In the test app these are added under a single group node

--- a/VE_Xplorer/SceneGraph/NURBS/testNURBS/testNURBS.vcproj
+++ b/VE_Xplorer/SceneGraph/NURBS/testNURBS/testNURBS.vcproj
@@ -188,12 +188,20 @@
 				RelativePath=".\NURBTest.cxx"
 				>
 			</File>
+			<File
+				RelativePath=".\OCCNURBSFileReader.cxx"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\OCCNURBSFileReader.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
