fixed build errors

--- a/VE_Xplorer/SceneGraph/NURBS/Utilities/Makefile
+++ b/VE_Xplorer/SceneGraph/NURBS/Utilities/Makefile
@@ -42,7 +42,8 @@ SRCS=\
 ifneq ($(CASROOT),)
 SRCS+=\
    VENURBS2OCCNURBS.cxx\
-   OCCNURBS2VENURBS.cxx
+   OCCNURBS2VENURBS.cxx\
+   IGES2VENURBS.cxx
 endif
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
