conversion of VE_Model to VE_XML::VE_Model

--- a/VE_Installer/Makefile
+++ b/VE_Installer/Makefile
@@ -35,6 +35,7 @@ DIRS= ${VE_SUITE_HOME}/VE_Open/idl \
       ${VE_SUITE_HOME}/VE_Conductor/Network \
       ${VE_SUITE_HOME}/VE_CE/Utilities \
       ${VE_SUITE_HOME}/VE_CE \
+      ${VE_SUITE_HOME}/VE_CE/UnitWrapper \
       ${VE_SUITE_HOME}/VE_Conductor \
       ${VE_SUITE_HOME}/VE_Xplorer \
       ${VE_SUITE_HOME}/VE_Builder/Translator/cfdTranslatorToVTK \
