fixes to selection on linux...need to re-think selection for cases with multiple patches.

--- a/VE_Xplorer/SceneGraph/NURBS/Makefile
+++ b/VE_Xplorer/SceneGraph/NURBS/Makefile
@@ -41,8 +41,8 @@ SRCS=\
    KnotVector.cxx \
    NCurve.cxx \
    NSurface.cxx \
+   NURBSNode.cxx \
    NURBSObject.cxx \
-   NURBSRenderer.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 
