--- a/VE_Xplorer/SceneGraph/NURBS/Utilities/Makefile
+++ b/VE_Xplorer/SceneGraph/NURBS/Utilities/Makefile
@@ -39,12 +39,12 @@ endif
 SRCS=\
    OCCNURBSFileReader.cxx
 
-ifneq ($(CASROOT),)
-SRCS+=\
-   VENURBS2OCCNURBS.cxx\
-   OCCNURBS2VENURBS.cxx\
-   IGES2VENURBS.cxx
-endif
+#ifneq ($(CASROOT),)
+#SRCS+=\
+#   VENURBS2OCCNURBS.cxx\
+#   OCCNURBS2VENURBS.cxx\
+#   IGES2VENURBS.cxx
+#endif
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 
@@ -55,9 +55,10 @@ include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.osg.mk
 else
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.pf.mk
 endif
-ifneq (${CASROOT},)
-include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.occ.mk
-endif
+
+#ifneq (${CASROOT},)
+#include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.occ.mk
+#endif
 # -----------------------------------------------------------------------------
 
 PLUGIN_NAME= $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)/libVE_NURBSUtilsLib$(EXEC_TAG)$(OSG)$(PATENTED_TAG)
