added user preferences dialog to conductor to start implementing the two user modes in conductor for interactive and classic modes

--- a/VE_Conductor/Framework/Makefile
+++ b/VE_Conductor/Framework/Makefile
@@ -38,7 +38,8 @@ SRCS=\
    isosurfaces.cpp\
    polydata.cpp\
    ScalarToolsDlg.cxx\
-	UI_TeacherTab.cpp
+   UI_TeacherTab.cpp\
+   UserPreferences.cxx
 
 # Specify the OS-dependent directory name for object files and depends
 OBJDIR= $(CFDHOSTTYPE)
