Docs: Clarified FAQ for building doc files.

--- a/share/docs/Makefile
+++ b/share/docs/Makefile
@@ -1,3 +1,4 @@
+# $Id: Makefile 16737 2005-02-03 19:47:26Z patrickh $
 
 default: html
 
@@ -10,7 +11,9 @@ default: html
 #XML_FILES=	$(VESUITE).xml
 
 XML_FILES=\
- vesuite.xml 
+ vesuite.xml \
+ README.xml \
+ INSTALL.xml
 
 XSLT_TOOL=Saxon 
 #FO_VERSION=XEP
@@ -25,4 +28,4 @@ XSLT_TOOL=Saxon
 # $(INSTALL).txt: $(INSTALL).html
 # $(INSTALL).pdf: $(INSTALL).fo
 
-include $(VE_SUITE_HOME)/VE_Installer/mk/docbook.mk
+include docbook.mk
