added ansys 8.1 and 9.0 translator to the dataloader

--- a/VE_Builder/Translator/DataLoader/Makefile
+++ b/VE_Builder/Translator/DataLoader/Makefile
@@ -30,7 +30,7 @@
 # *************** <auto-copyright.pl END do not edit this line> ***************
 CFDUNAME = $(shell uname)
 
-#FLUENT_MFIX= TRUE
+FLUENT_MFIX= TRUE
 
 #__________________________________________________________
 # list the source files that are in current directory
@@ -44,7 +44,9 @@ SRCS=\
    gridConversion.cpp\
    plot3dReader.cpp\
    StarCDTranslator.cxx\
-   starReader.cpp
+   starReader.cpp\
+   ansysReader.cxx\
+   AnsysTranslator.cxx
 
 ifeq (${FLUENT_MFIX}, TRUE)
 SRCS+=\
