Docs: Added chunk-html option, cleaned up image linking, updated docs readme.

--- a/share/docs/Makefile
+++ b/share/docs/Makefile
@@ -5,7 +5,7 @@ default: all
 XML_FILES=\
  vesuite.xml
 
-XSLT_TOOL=Saxon 
+XSLT_TOOL?=Saxon 
 #FO_VERSION=XEP
 
 include $(VE_SUITE_HOME)/VE_Installer/mk/docbook.mk
