update include paths

--- a/VE_Builder/Utilities/mk/meshViewer/Makefile
+++ b/VE_Builder/Utilities/mk/meshViewer/Makefile
@@ -44,8 +44,7 @@ EXTRA_CXXFLAGS+=
 
 EXTRA_DEFS+=
 
-EXTRA_INCLUDES+= -I${VE_SUITE_HOME}/VE_Xplorer \
-                 -I$(VE_SUITE_HOME)/VE_Builder/Translator
+EXTRA_INCLUDES+= -I${VE_SUITE_HOME}
 
 #EXTRA_DEBUG_FLAGS+= -g -D_DEBUG
 #EXTRA_OPTIM_FLAGS+= -O2 -OPT:Olimit=0 -D_OPT
