--- a/VE_Builder/vtkTo3DTexture/tcGUI/Makefile
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/Makefile
@@ -35,7 +35,7 @@ NO_DEPEND= YES
 DEBUG_APP?= TRUE
 #OPTIM_APP?= TRUE
 
-EXTRA_CXXFLAGS+= -I$(VJ_DEPS_DIR)/include
+EXTRA_CXXFLAGS+= -I$(VE_SUITE_HOME)
 EXTRA_LIBS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_UtilLib
 ifeq ($(MPI_APP), TRUE)
    EXTRA_LIBS+= -L/usr/local/lib -lmpi
