--- a/VE_Builder/Utilities/mk/transformVTK/Makefile
+++ b/VE_Builder/Utilities/mk/transformVTK/Makefile
@@ -27,8 +27,7 @@ EXTRA_CXXFLAGS+=
 
 EXTRA_DEFS+=
 
-EXTRA_INCLUDES+=	-I${VE_SUITE_HOME}/VE_Xplorer \
-                  -I$(VE_SUITE_HOME)/VE_Builder/Translator
+EXTRA_INCLUDES+=	-I${VE_SUITE_HOME}
 EXTRA_LIBS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) 
 EXTRA_LIBS+= -lVE_UtilLib
 
